# overdue

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TOOLS.md  docker-compose.yml  freshness-badge.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tailwind.config.js
.claude/skills/doc-it/: SKILL.md
.github/: dependabot.yml  doc-update.yml  freshness-allowlist.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  game_balance.yml  icon_avatar.yml
.github/scripts/: build_badge.py  format_pr_comment.py  freshness.py
.github/workflows/: doc-update.yml  freshness-badge.yml  freshness-stub.yml  freshness.yml  traffic-archive.yml
.gitpod/: automations.yaml
docs/api/: authentication.md  endpoints.md  errors.md  rate-limiting.md
docs/architecture/: ci-cd.md  database.md  overview.md  pixel-art.md
docs/changelog/: CHANGELOG.md
docs/guides/: bots.md  configuration.md  gameplay.md  installation.md  quickstart.md
scripts/: build_icons.py
src/: __init__.py  main.py
src/api/: bulletins.py  catalog.py  reading_room.py  router.py  shelves.py  volumes.py
src/auth/: circulation.py  librarian.py  library_card.py  passwords.py  web_session.py
src/cli/: helpers.py  main.py
src/cli/commands/: auth.py  bots.py  seed.py  shelves.py  stats.py  volumes.py
src/config/: defaults.py  quiet_hours.py  settings.py
src/db/: engine.py  seed.py  tables.py
src/errors/: codes.py  handlers.py  incidents.py
src/game/: avatars.py  badges.py  bots.py  engine.py  icons.py  mood.py  streaks.py  xp.py
src/game/icons/: __init__.py  _achievements.py  _books.py  _catalog.py  _characters.py  _nature.py  _objects.py  _palette.py  _renderer.py
src/models/: bulletin.py  catalog.py  game.py  librarian.py  shelf.py  volume.py
src/web/: actions.py  auth.py  dashboard.py  how_to_play.py  leaderboard.py  mood_middleware.py  my_library.py  profile.py  router.py  settings.py  shelves.py  templates.py  volumes.py
static/css/: styles.css  tailwind.css
static/js/: alpine.min.js  app.js  gauges.js  htmx.min.js
templates/: 404.html  500.html  base.html  dashboard.html  how_to_play.html  leaderboard.html  login.html  my_library.html  profile.html  register.html  search.html  settings.html  shelf_create.html  shelf_detail.html  shelves.html  volume_create.html  volume_detail.html
templates/partials/: activity_feed.html  badge_grid.html  dewey_gauge.html  game_feedback.html  reading_room_live.html  review_history_page.html  review_result.html  search_results.html  streak_counter.html  volume_card.html
tests/: conftest.py  test_avatars.py  test_build_badge.py  test_format_pr_comment.py  test_freshness.py  test_icons.py  test_mood.py  test_passwords.py  test_rescue_bonus.py
