[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overdue"
version = "0.1.0a1"
description = "Don't let your knowledge expire. A FastAPI-powered knowledge library game."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Taylor Dolezal", email = "117500+onlydole@users.noreply.github.com" },
]
keywords = ["knowledge", "library", "fastapi", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
overdue = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
