[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overdue"
version = "0.1.0a1"
description = "Don't let your knowledge expire. A FastAPI-powered knowledge library game."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Taylor Dolezal", email = "117500+onlydole@users.noreply.github.com" },
]
keywords = ["knowledge", "library", "fastapi", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.22.1",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "PyJWT>=2.12.1",
    "bcrypt>=5.0.0,<5.1.0",
    "typer>=0.25.1",
    "rich>=15.0.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.28",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=2.1.0,<3.0.0",
    "PyYAML>=6.0",
    "tree-sitter>=0.25",  # QueryCursor + dict-shaped captures landed here
    "tree-sitter-typescript>=0.23",
]

[project.scripts]
overdue = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
